Fixed mobile stuck onTouch bug

--- a/src/Components/UI/uiStyles/Utils.module.scss
+++ b/src/Components/UI/uiStyles/Utils.module.scss
@@ -2,79 +2,91 @@ $react-theme-color: #20cef9;
 $card-font: "Montserrat", sans-serif;
 
 .card {
+  border: 3px solid $react-theme-color;
+  border-radius: 15px;
+  font-family: $card-font;
 
-    border: 3px solid $react-theme-color;
-    border-radius: 15px;
-    font-family: $card-font;
-
-    background-color: white;
+  background-color: white;
 }
 
 .dividerVertical {
-    box-sizing: border-box;
-    border-left: 1px solid $react-theme-color;
-    pointer-events: none;
+  box-sizing: border-box;
+  border-left: 1px solid $react-theme-color;
+  pointer-events: none;
 }
 
-
 .dividerHorizontal {
-    box-sizing: border-box;
-    border-top: 1px solid $react-theme-color;
-    pointer-events: none;
+  box-sizing: border-box;
+  border-top: 1px solid $react-theme-color;
+  pointer-events: none;
 }
 
 .themedButton {
-        border: 2px solid $react-theme-color;
-        background-color: white;
-        border-radius: 25px;
-        font-weight: bold;
-        color: black;
-        transition: 0.15s ease-in;
+  border: 2px solid $react-theme-color;
+  background-color: white;
+  border-radius: 25px;
+  font-weight: bold;
+  color: black;
+  transition: 0.15s ease-in;
 }
 
-.themedButton:Hover {
+@media (hover: hover) {
+  .themedButton:hover {
     background-color: $react-theme-color;
     color: white;
-    cursor: pointer; 
+    cursor: pointer;
+  }
 }
 
+.themedButton:active {
+    background-color: $react-theme-color;
+    color: white;
+    cursor: pointer;
+  }
 
 
 .inputsWrap {
-    display: flex;
-    position: relative;
-    bottom: -0.4rem;
-    width: fit-content;
-    height: 1.6rem;
+  display: flex;
+  position: relative;
+  bottom: -0.4rem;
+  width: fit-content;
+  height: 1.6rem;
 
-    overflow: hidden;
-    background-color: transparent;
-    box-sizing: border-box;
-    display: inline-block;
-    outline: 2px solid $react-theme-color;
-    border-radius: 25px;
+  overflow: hidden;
+  background-color: transparent;
+  box-sizing: border-box;
+  display: inline-block;
+  outline: 2px solid $react-theme-color;
+  border-radius: 25px;
 
-    z-index: 1;
+  z-index: 1;
 }
 
-
 .inputControlBtn {
-    background-color: white;
-    color: black;
-    font-weight: bold;
-    border: none;
-    transition: 0.1s ease-in;
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  border: none;
+  transition: 0.1s ease-in;
 
-    padding: 0px;
-    border-left: 1px solid $react-theme-color
+  padding: 0px;
+  border-left: 1px solid $react-theme-color;
 }
 
 .inputControlBtn:first-of-type {
-    padding-left: 0px;
+  padding-left: 0px;
 }
 
-.inputControlBtn:hover {
+@media (hover: hover) {
+  .inputControlBtn:hover {
     background-color: $react-theme-color;
     color: white;
-    cursor: pointer; 
+    cursor: pointer;
+  }
+}
+
+.inputControlBtn:active {
+  background-color: $react-theme-color;
+  color: white;
+  cursor: pointer;
 }
